# Collaborative_Multi-task_ranking

./: README.md
codes/: InputData.h  Makefile  README.md  evaluate.h  example.cpp  hybridCR  hybridranking.h
codes-coordinate-descend/: CMakeLists.txt  README.md  evaluate.h  hybridCR.cpp  hybridranking.h  hybridranking_v1.h  listrankmf.cpp  listrankmf.h
codes/config/: default.cfg
data/: ml100k_test_20.txt  ml100k_train_20.txt  ml100k_train_comp_20.txt  ml1m_train_20.txt
data/rawdata/: raw2listdata.py  raw2listdata2.py
stochastic/: ClassRelationShip  ClassRelationShip~  Makefile  README.md  pairrank
stochastic-mac/: Makefile  pairrank
stochastic-mac/code/: elements.hpp
stochastic-mac/code/solver/: hybridrank.hpp  (+4 more)
stochastic-mac/config/: default.cfg~
stochastic-mac/util/: num2comps.py
stochastic/code/: pairrank.cpp  problem.hpp
stochastic/config/: default.cfg  default.cfg~
stochastic/hybrid-code/: evaluator.hpp  loss.hpp  pairrank.cpp  problem.hpp  ratings.hpp  testdata.hpp
stochastic/res/: ml100k.md  ml1m.md
stochastic/util/: genInputPairs.py  genInputdata.py  genSvmata.py  num2comps.py~  rating2input (copy).py
stochastic2/: README.md  pairrank
stochastic2/code/: pairrank.cpp~
stochastic2/config/: default.cfg  default.cfg~
stochastic2/hybrid-code/: elements.hpp  evaluator.hpp  loss.hpp  pairrank.cpp
stochastic2/res/: ml100k.md  ml1m.md
stochastic2/util/: genInputdata.py  rating2input.py  rating2input2.py  rating2input_itempairs.py  rating2input_userpairs.py  rating2svm.py  rating2svm.py~  readme.md  svm2rating.py  svm2svm.py
(+40 files in other folders)
